@@ -2,6 +2,7 @@
 v4.0.0-git
 ----------
 
+[jan] Return to the same page after running actions from the browse view.
 
 
 -----------
